--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; python-rtmidi 1.1.1 documentation</title>
+    <title>Index &#8212; python-rtmidi 1.1.2 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -26,7 +26,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.1.1 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.1.2 documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -52,20 +52,20 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="classes.html#rtmidi.MidiIn.cancel_callback">cancel_callback() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.cancel_callback">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.cancel_callback">cancel_callback() (rtmidi.MidiIn method)</a>
 </li>
-      <li><a href="classes.html#rtmidi.MidiIn.cancel_error_callback">cancel_error_callback() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.cancel_error_callback">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.cancel_error_callback">cancel_error_callback() (rtmidi.MidiIn method)</a>
 
       <ul>
-        <li><a href="classes.html#rtmidi.MidiOut.cancel_error_callback">(rtmidi.MidiOut method)</a>, <a href="rtmidi.html#rtmidi.MidiOut.cancel_error_callback">[1]</a>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.cancel_error_callback">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="classes.html#rtmidi.MidiIn.close_port">close_port() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.close_port">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.close_port">close_port() (rtmidi.MidiIn method)</a>
 
       <ul>
-        <li><a href="classes.html#rtmidi.MidiOut.close_port">(rtmidi.MidiOut method)</a>, <a href="rtmidi.html#rtmidi.MidiOut.close_port">[1]</a>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.close_port">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -76,32 +76,32 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="rtmidi.html#rtmidi.midiutil.get_api_from_environment">get_api_from_environment() (in module rtmidi.midiutil)</a>
 </li>
-      <li><a href="classes.html#rtmidi.MidiIn.get_current_api">get_current_api() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.get_current_api">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.get_current_api">get_current_api() (rtmidi.MidiIn method)</a>
 
       <ul>
-        <li><a href="classes.html#rtmidi.MidiOut.get_current_api">(rtmidi.MidiOut method)</a>, <a href="rtmidi.html#rtmidi.MidiOut.get_current_api">[1]</a>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.get_current_api">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
-      <li><a href="classes.html#rtmidi.MidiIn.get_message">get_message() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.get_message">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.get_message">get_message() (rtmidi.MidiIn method)</a>
 </li>
-      <li><a href="classes.html#rtmidi.MidiIn.get_port_count">get_port_count() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.get_port_count">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.get_port_count">get_port_count() (rtmidi.MidiIn method)</a>
 
       <ul>
-        <li><a href="classes.html#rtmidi.MidiOut.get_port_count">(rtmidi.MidiOut method)</a>, <a href="rtmidi.html#rtmidi.MidiOut.get_port_count">[1]</a>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.get_port_count">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="classes.html#rtmidi.MidiIn.get_port_name">get_port_name() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.get_port_name">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.get_port_name">get_port_name() (rtmidi.MidiIn method)</a>
 
       <ul>
-        <li><a href="classes.html#rtmidi.MidiOut.get_port_name">(rtmidi.MidiOut method)</a>, <a href="rtmidi.html#rtmidi.MidiOut.get_port_name">[1]</a>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.get_port_name">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
-      <li><a href="classes.html#rtmidi.MidiIn.get_ports">get_ports() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.get_ports">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.get_ports">get_ports() (rtmidi.MidiIn method)</a>
 
       <ul>
-        <li><a href="classes.html#rtmidi.MidiOut.get_ports">(rtmidi.MidiOut method)</a>, <a href="rtmidi.html#rtmidi.MidiOut.get_ports">[1]</a>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.get_ports">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -110,12 +110,12 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="classes.html#rtmidi.MidiIn.ignore_types">ignore_types() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.ignore_types">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.ignore_types">ignore_types() (rtmidi.MidiIn method)</a>
 </li>
-      <li><a href="classes.html#rtmidi.MidiIn.is_port_open">is_port_open() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.is_port_open">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.is_port_open">is_port_open() (rtmidi.MidiIn method)</a>
 
       <ul>
-        <li><a href="classes.html#rtmidi.MidiOut.is_port_open">(rtmidi.MidiOut method)</a>, <a href="rtmidi.html#rtmidi.MidiOut.is_port_open">[1]</a>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.is_port_open">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -142,11 +142,11 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="classes.html#rtmidi.MidiIn">MidiIn (class in rtmidi)</a>, <a href="rtmidi.html#rtmidi.MidiIn">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn">MidiIn (class in rtmidi)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="classes.html#rtmidi.MidiOut">MidiOut (class in rtmidi)</a>, <a href="rtmidi.html#rtmidi.MidiOut">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiOut">MidiOut (class in rtmidi)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -162,16 +162,16 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="classes.html#rtmidi.MidiIn.open_port">open_port() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.open_port">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.open_port">open_port() (rtmidi.MidiIn method)</a>
 
       <ul>
-        <li><a href="classes.html#rtmidi.MidiOut.open_port">(rtmidi.MidiOut method)</a>, <a href="rtmidi.html#rtmidi.MidiOut.open_port">[1]</a>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.open_port">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
-      <li><a href="classes.html#rtmidi.MidiIn.open_virtual_port">open_virtual_port() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.open_virtual_port">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.open_virtual_port">open_virtual_port() (rtmidi.MidiIn method)</a>
 
       <ul>
-        <li><a href="classes.html#rtmidi.MidiOut.open_virtual_port">(rtmidi.MidiOut method)</a>, <a href="rtmidi.html#rtmidi.MidiOut.open_virtual_port">[1]</a>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.open_virtual_port">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -196,16 +196,16 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="classes.html#rtmidi.MidiOut.send_message">send_message() (rtmidi.MidiOut method)</a>, <a href="rtmidi.html#rtmidi.MidiOut.send_message">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiOut.send_message">send_message() (rtmidi.MidiOut method)</a>
 </li>
-      <li><a href="classes.html#rtmidi.MidiIn.set_callback">set_callback() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.set_callback">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.set_callback">set_callback() (rtmidi.MidiIn method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="classes.html#rtmidi.MidiIn.set_error_callback">set_error_callback() (rtmidi.MidiIn method)</a>, <a href="rtmidi.html#rtmidi.MidiIn.set_error_callback">[1]</a>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.set_error_callback">set_error_callback() (rtmidi.MidiIn method)</a>
 
       <ul>
-        <li><a href="classes.html#rtmidi.MidiOut.set_error_callback">(rtmidi.MidiOut method)</a>, <a href="rtmidi.html#rtmidi.MidiOut.set_error_callback">[1]</a>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.set_error_callback">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -243,11 +243,11 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.1.1 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.1.2 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2012 - 2016, Christopher Arndt.
+        &#169; Copyright 2012 - 2018, Christopher Arndt.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.6.
     </div>
   </body>
