--- a/genindex.html
+++ b/genindex.html
@@ -7,13 +7,15 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; python-rtmidi 1.1.2 documentation</title>
+    <title>Index &#8212; python-rtmidi 1.2.0 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
+    
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
+    
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" /> 
   </head><body>
@@ -26,7 +28,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.1.2 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.2.0 documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -44,9 +46,11 @@
  | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
  | <a href="#O"><strong>O</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
+ | <a href="#U"><strong>U</strong></a>
  
 </div>
 <h2 id="C">C</h2>
@@ -76,6 +80,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="rtmidi.html#rtmidi.midiutil.get_api_from_environment">get_api_from_environment() (in module rtmidi.midiutil)</a>
 </li>
+      <li><a href="rtmidi.html#rtmidi.get_compiled_api">get_compiled_api() (in module rtmidi)</a>
+</li>
       <li><a href="rtmidi.html#rtmidi.MidiIn.get_current_api">get_current_api() (rtmidi.MidiIn method)</a>
 
       <ul>
@@ -104,6 +110,8 @@
         <li><a href="rtmidi.html#rtmidi.MidiOut.get_ports">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
+      <li><a href="rtmidi.html#rtmidi.get_rtmidi_version">get_rtmidi_version() (in module rtmidi)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -112,14 +120,18 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="rtmidi.html#rtmidi.MidiIn.ignore_types">ignore_types() (rtmidi.MidiIn method)</a>
 </li>
+      <li><a href="rtmidi.html#rtmidi.InvalidPortError">InvalidPortError (class in rtmidi)</a>
+</li>
+      <li><a href="rtmidi.html#rtmidi.InvalidUseError">InvalidUseError (class in rtmidi)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="rtmidi.html#rtmidi.MidiIn.is_port_open">is_port_open() (rtmidi.MidiIn method)</a>
 
       <ul>
         <li><a href="rtmidi.html#rtmidi.MidiOut.is_port_open">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="rtmidi.html#rtmidi.midiconstants.is_status">is_status() (in module rtmidi.midiconstants)</a>
 </li>
   </ul></td>
@@ -142,11 +154,21 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="rtmidi.html#rtmidi.MidiIn">MidiIn (class in rtmidi)</a>
+      <li><a href="rtmidi.html#rtmidi.MemoryAllocationError">MemoryAllocationError (class in rtmidi)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="rtmidi.html#rtmidi.MidiIn">MidiIn (class in rtmidi)</a>
+</li>
       <li><a href="rtmidi.html#rtmidi.MidiOut">MidiOut (class in rtmidi)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="rtmidi.html#rtmidi.NoDevicesError">NoDevicesError (class in rtmidi)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -188,7 +210,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="rtmidi.html#module-rtmidi.midiutil">rtmidi.midiutil (module)</a>
 </li>
-      <li><a href="rtmidi.html#module-rtmidi.release">rtmidi.release (module)</a>
+      <li><a href="rtmidi.html#rtmidi.RtMidiError">RtMidiError (class in rtmidi)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -200,6 +222,12 @@
 </li>
       <li><a href="rtmidi.html#rtmidi.MidiIn.set_callback">set_callback() (rtmidi.MidiIn method)</a>
 </li>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.set_client_name">set_client_name() (rtmidi.MidiIn method)</a>
+
+      <ul>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.set_client_name">(rtmidi.MidiOut method)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="rtmidi.html#rtmidi.MidiIn.set_error_callback">set_error_callback() (rtmidi.MidiIn method)</a>
@@ -208,6 +236,22 @@
         <li><a href="rtmidi.html#rtmidi.MidiOut.set_error_callback">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.set_port_name">set_port_name() (rtmidi.MidiIn method)</a>
+
+      <ul>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.set_port_name">(rtmidi.MidiOut method)</a>
+</li>
+      </ul></li>
+      <li><a href="rtmidi.html#rtmidi.SystemError">SystemError (class in rtmidi)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="rtmidi.html#rtmidi.UnsupportedOperationError">UnsupportedOperationError (class in rtmidi)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -243,12 +287,12 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.1.2 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.2.0 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2012 - 2018, Christopher Arndt.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.6.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.2.
     </div>
   </body>
 </html>
