--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; python-rtmidi 1.2.1 documentation</title>
+    <title>Index &#8212; python-rtmidi 1.3.0 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
@@ -28,7 +28,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.2.1 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.3.0 documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -78,9 +78,15 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="rtmidi.html#rtmidi.get_api_display_name">get_api_display_name() (in module rtmidi)</a>
+</li>
       <li><a href="rtmidi.html#rtmidi.midiutil.get_api_from_environment">get_api_from_environment() (in module rtmidi.midiutil)</a>
 </li>
+      <li><a href="rtmidi.html#rtmidi.get_api_name">get_api_name() (in module rtmidi)</a>
+</li>
       <li><a href="rtmidi.html#rtmidi.get_compiled_api">get_compiled_api() (in module rtmidi)</a>
+</li>
+      <li><a href="rtmidi.html#rtmidi.get_compiled_api_by_name">get_compiled_api_by_name() (in module rtmidi)</a>
 </li>
       <li><a href="rtmidi.html#rtmidi.MidiIn.get_current_api">get_current_api() (rtmidi.MidiIn method)</a>
 
@@ -88,6 +94,8 @@
         <li><a href="rtmidi.html#rtmidi.MidiOut.get_current_api">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="rtmidi.html#rtmidi.MidiIn.get_message">get_message() (rtmidi.MidiIn method)</a>
 </li>
       <li><a href="rtmidi.html#rtmidi.MidiIn.get_port_count">get_port_count() (rtmidi.MidiIn method)</a>
@@ -96,8 +104,6 @@
         <li><a href="rtmidi.html#rtmidi.MidiOut.get_port_count">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="rtmidi.html#rtmidi.MidiIn.get_port_name">get_port_name() (rtmidi.MidiIn method)</a>
 
       <ul>
@@ -287,7 +293,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.2.1 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.3.0 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
