--- a/_modules/rtmidi/midiutil.html
+++ b/_modules/rtmidi/midiutil.html
@@ -1,12 +1,10 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>rtmidi.midiutil &#8212; python-rtmidi 1.3.0 documentation</title>
+    <meta charset="utf-8" />
+    <title>rtmidi.midiutil &#8212; python-rtmidi 1.3.1 documentation</title>
     <link rel="stylesheet" href="../../_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     
@@ -14,6 +12,7 @@
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
+    <script type="text/javascript" src="../../_static/language_data.js"></script>
     
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" /> 
@@ -27,7 +26,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.3.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.3.1 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">Module code</a> &#187;</li> 
       </ul>
     </div>  
@@ -92,7 +91,7 @@
 <span class="sd">    ``WINDOWS_MM`` and ``RTMIDI_DUMMY``. If no valid value is found,</span>
 <span class="sd">    ``rtmidi.API_UNSPECIFIED`` will be used.</span>
 
-<span class="sd">    Returns a ``rtmmidi.API_*`` constant.</span>
+<span class="sd">    Returns a ``rtmidi.API_*`` constant.</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">api</span> <span class="o">==</span> <span class="n">rtmidi</span><span class="o">.</span><span class="n">API_UNSPECIFIED</span> <span class="ow">and</span> <span class="s1">&#39;RTMIDI_API&#39;</span> <span class="ow">in</span> <span class="n">os</span><span class="o">.</span><span class="n">environ</span><span class="p">:</span>
@@ -131,6 +130,11 @@
 <span class="sd">    Optionally the RtMidi API can be passed with the ``api`` argument. If not</span>
 <span class="sd">    it will be determined via the ``get_api_from_environment`` function.</span>
 
+<span class="sd">    Exceptions:</span>
+
+<span class="sd">    ``rtmidi.SystemError``</span>
+<span class="sd">        Raised when RtMidi backend initialization fails.</span>
+
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">midiin</span> <span class="o">=</span> <span class="n">rtmidi</span><span class="o">.</span><span class="n">MidiIn</span><span class="p">(</span><span class="n">get_api_from_environment</span><span class="p">(</span><span class="n">api</span><span class="p">))</span>
     <span class="n">list_available_ports</span><span class="p">(</span><span class="n">midiio</span><span class="o">=</span><span class="n">midiin</span><span class="p">)</span></div>
@@ -141,6 +145,11 @@
 
 <span class="sd">    Optionally the RtMidi API can be passed with the ``api`` argument. If not</span>
 <span class="sd">    it will be determined via the ``get_api_from_environment`` function.</span>
+
+<span class="sd">    Exceptions:</span>
+
+<span class="sd">    ``rtmidi.SystemError``</span>
+<span class="sd">        Raised when RtMidi backend initialization fails.</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">midiout</span> <span class="o">=</span> <span class="n">rtmidi</span><span class="o">.</span><span class="n">MidiOut</span><span class="p">(</span><span class="n">get_api_from_environment</span><span class="p">(</span><span class="n">api</span><span class="p">))</span>
@@ -211,11 +220,14 @@
 <span class="sd">        Raised when the user presses Control-C or Control-D during a console</span>
 <span class="sd">        prompt.</span>
 
-<span class="sd">    ``IOError``</span>
+<span class="sd">    ``rtmidi.SystemError``</span>
+<span class="sd">        Raised when RtMidi backend initialization fails.</span>
+
+<span class="sd">    ``rtmidi.NoDevicesError``</span>
 <span class="sd">        Raised when no MIDI input or output ports (depending on what was</span>
 <span class="sd">        requested) are available.</span>
 
-<span class="sd">    ``ValueError``</span>
+<span class="sd">    ``rtmidi.InvalidPortError``</span>
 <span class="sd">        Raised when an invalid port number or name is passed and</span>
 <span class="sd">        ``interactive`` is ``False``.</span>
 
@@ -247,7 +259,7 @@
 
     <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">ports</span><span class="p">)</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
         <span class="k">del</span> <span class="n">midiobj</span>
-        <span class="k">raise</span> <span class="ne">IOError</span><span class="p">(</span><span class="s2">&quot;No MIDI </span><span class="si">%s</span><span class="s2"> ports found.&quot;</span> <span class="o">%</span> <span class="n">type_</span><span class="p">)</span>
+        <span class="k">raise</span> <span class="n">rtmidi</span><span class="o">.</span><span class="n">NoDevicesError</span><span class="p">(</span><span class="s2">&quot;No MIDI </span><span class="si">%s</span><span class="s2"> ports found.&quot;</span> <span class="o">%</span> <span class="n">type_</span><span class="p">)</span>
 
     <span class="k">try</span><span class="p">:</span>
         <span class="n">port</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">port</span><span class="p">)</span>
@@ -283,14 +295,15 @@
         <span class="n">midiobj</span><span class="o">.</span><span class="n">open_port</span><span class="p">(</span><span class="n">port</span><span class="p">,</span> <span class="n">port_name</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">midiobj</span><span class="p">,</span> <span class="n">port_name</span>
     <span class="k">else</span><span class="p">:</span>
-        <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;Invalid port.&quot;</span><span class="p">)</span></div>
+        <span class="k">raise</span> <span class="n">rtmidi</span><span class="o">.</span><span class="n">InvalidPortError</span><span class="p">(</span><span class="s2">&quot;Invalid port.&quot;</span><span class="p">)</span></div>
 
 
 <div class="viewcode-block" id="open_midiinput"><a class="viewcode-back" href="../../rtmidi.html#rtmidi.midiutil.open_midiinput">[docs]</a><span class="k">def</span> <span class="nf">open_midiinput</span><span class="p">(</span><span class="n">port</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">api</span><span class="o">=</span><span class="n">rtmidi</span><span class="o">.</span><span class="n">API_UNSPECIFIED</span><span class="p">,</span> <span class="n">use_virtual</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
                    <span class="n">interactive</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">client_name</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">port_name</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Open a MIDI port for input and return a MidiIn instance.</span>
 
-<span class="sd">    See the ``open_midiport`` function for information on parameters.</span>
+<span class="sd">    See the ``open_midiport`` function for information on parameters and</span>
+<span class="sd">    possible exceptions.</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">open_midiport</span><span class="p">(</span><span class="n">port</span><span class="p">,</span> <span class="s2">&quot;input&quot;</span><span class="p">,</span> <span class="n">api</span><span class="p">,</span> <span class="n">use_virtual</span><span class="p">,</span> <span class="n">interactive</span><span class="p">,</span>
@@ -301,7 +314,8 @@
                     <span class="n">interactive</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">client_name</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">port_name</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Open a MIDI port for output and return a MidiOut instance.</span>
 
-<span class="sd">    See the ``open_midiport`` function for information on parameters.</span>
+<span class="sd">    See the ``open_midiport`` function for information on parameters and</span>
+<span class="sd">    possible exceptions.</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">open_midiport</span><span class="p">(</span><span class="n">port</span><span class="p">,</span> <span class="s2">&quot;output&quot;</span><span class="p">,</span> <span class="n">api</span><span class="p">,</span> <span class="n">use_virtual</span><span class="p">,</span> <span class="n">interactive</span><span class="p">,</span>
@@ -314,13 +328,11 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
 <div id="searchbox" style="display: none" role="search">
-  <h3>Quick search</h3>
+  <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
     <form class="search" action="../../search.html" method="get">
-      <input type="text" name="q" />
+      <input type="text" name="q" aria-labelledby="searchlabel" />
       <input type="submit" value="Go" />
-      <input type="hidden" name="check_keywords" value="yes" />
-      <input type="hidden" name="area" value="default" />
     </form>
     </div>
 </div>
@@ -338,13 +350,13 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.3.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.3.1 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" >Module code</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2012 - 2018, Christopher Arndt.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.2.
+        &#169; Copyright 2012 - 2019, Christopher Arndt.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.2.0.
     </div>
   </body>
 </html>
