--- a/_modules/rtmidi/midiconstants.html
+++ b/_modules/rtmidi/midiconstants.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>rtmidi.midiconstants &#8212; python-rtmidi 1.3.1 documentation</title>
+    <title>rtmidi.midiconstants &#8212; python-rtmidi 1.4.0 documentation</title>
     <link rel="stylesheet" href="../../_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     
@@ -26,7 +26,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.3.1 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.4.0 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">Module code</a> &#187;</li> 
       </ul>
     </div>  
@@ -75,7 +75,7 @@
 <span class="c1"># High resolution continuous controllers (MSB)</span>
 
 <span class="n">BANK_SELECT</span> <span class="o">=</span> <span class="n">BANK_SELECT_MSB</span> <span class="o">=</span> <span class="mh">0x00</span>
-<span class="n">MODULATION_WHEEL</span> <span class="o">=</span> <span class="n">MODULATION_WHEEL_MSB</span> <span class="o">=</span> <span class="mh">0x01</span>
+<span class="n">MODULATION</span> <span class="o">=</span> <span class="n">MODULATION_WHEEL</span> <span class="o">=</span> <span class="n">MODULATION_WHEEL_MSB</span> <span class="o">=</span> <span class="mh">0x01</span>
 <span class="n">BREATH_CONTROLLER</span> <span class="o">=</span> <span class="n">BREATH_CONTROLLER_MSB</span> <span class="o">=</span> <span class="mh">0x02</span>
 <span class="n">FOOT_CONTROLLER</span> <span class="o">=</span> <span class="n">FOOT_CONTROLLER_MSB</span> <span class="o">=</span> <span class="mh">0x04</span>
 <span class="n">PORTAMENTO_TIME</span> <span class="o">=</span> <span class="n">PORTAMENTO_TIME_MSB</span> <span class="o">=</span> <span class="mh">0x05</span>
@@ -316,13 +316,13 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.3.1 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.4.0 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" >Module code</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2012 - 2019, Christopher Arndt.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.2.0.
+        &#169; Copyright 2012 - 2020, Christopher Arndt.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.2.1.
     </div>
   </body>
 </html>
