Update docs for commit 50a0adb

--- a/genindex.html
+++ b/genindex.html
@@ -1,19 +1,19 @@
 
-
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; python-rtmidi 1.4.0 documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index &#8212; python-rtmidi 1.4.2 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
-    <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
-    <script type="text/javascript" src="_static/jquery.js"></script>
-    <script type="text/javascript" src="_static/underscore.js"></script>
-    <script type="text/javascript" src="_static/doctools.js"></script>
-    <script type="text/javascript" src="_static/language_data.js"></script>
+    <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
+    <script src="_static/jquery.js"></script>
+    <script src="_static/underscore.js"></script>
+    <script src="_static/doctools.js"></script>
+    <script src="_static/language_data.js"></script>
     
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" /> 
@@ -27,7 +27,8 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.4.0 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.4.2 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-this"><a href="">Index</a></li> 
       </ul>
     </div>  
 
@@ -41,6 +42,7 @@
 
 <div class="genindex-jumpbox">
  <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
@@ -69,6 +71,18 @@
 
       <ul>
         <li><a href="rtmidi.html#rtmidi.MidiOut.close_port">(rtmidi.MidiOut method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="rtmidi.html#rtmidi.MidiIn.delete">delete() (rtmidi.MidiIn method)</a>
+
+      <ul>
+        <li><a href="rtmidi.html#rtmidi.MidiOut.delete">(rtmidi.MidiOut method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -161,12 +175,23 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="rtmidi.html#rtmidi.MemoryAllocationError">MemoryAllocationError (class in rtmidi)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="rtmidi.html#rtmidi.MidiIn">MidiIn (class in rtmidi)</a>
 </li>
       <li><a href="rtmidi.html#rtmidi.MidiOut">MidiOut (class in rtmidi)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    module
+
+      <ul>
+        <li><a href="rtmidi.html#module-rtmidi">rtmidi</a>
+</li>
+        <li><a href="rtmidi.html#module-rtmidi.midiconstants">rtmidi.midiconstants</a>
+</li>
+        <li><a href="rtmidi.html#module-rtmidi.midiutil">rtmidi.midiutil</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -207,14 +232,29 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="rtmidi.html#module-rtmidi">rtmidi (module)</a>
+      <li>
+    rtmidi
+
+      <ul>
+        <li><a href="rtmidi.html#module-rtmidi">module</a>
 </li>
-      <li><a href="rtmidi.html#module-rtmidi.midiconstants">rtmidi.midiconstants (module)</a>
+      </ul></li>
+      <li>
+    rtmidi.midiconstants
+
+      <ul>
+        <li><a href="rtmidi.html#module-rtmidi.midiconstants">module</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="rtmidi.html#module-rtmidi.midiutil">rtmidi.midiutil (module)</a>
+      <li>
+    rtmidi.midiutil
+
+      <ul>
+        <li><a href="rtmidi.html#module-rtmidi.midiutil">module</a>
 </li>
+      </ul></li>
       <li><a href="rtmidi.html#rtmidi.RtMidiError">RtMidiError (class in rtmidi)</a>
 </li>
   </ul></td>
@@ -262,6 +302,7 @@
 
 
 
+            <div class="clearer"></div>
           </div>
         </div>
       </div>
@@ -276,7 +317,7 @@
     </form>
     </div>
 </div>
-<script type="text/javascript">$('#searchbox').show(0);</script>
+<script>$('#searchbox').show(0);</script>
         </div>
       </div>
       <div class="clearer"></div>
@@ -290,12 +331,13 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.4.0 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.4.2 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-this"><a href="">Index</a></li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2012 - 2020, Christopher Arndt.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.2.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.1.2.
     </div>
   </body>
 </html>
