--- a/_modules/rtmidi/midiconstants.html
+++ b/_modules/rtmidi/midiconstants.html
@@ -1,18 +1,19 @@
 
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <meta charset="utf-8" />
-    <title>rtmidi.midiconstants &#8212; python-rtmidi 1.4.0 documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>rtmidi.midiconstants &#8212; python-rtmidi 1.4.2 documentation</title>
     <link rel="stylesheet" href="../../_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     
-    <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
-    <script type="text/javascript" src="../../_static/jquery.js"></script>
-    <script type="text/javascript" src="../../_static/underscore.js"></script>
-    <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <script type="text/javascript" src="../../_static/language_data.js"></script>
+    <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
+    <script src="../../_static/jquery.js"></script>
+    <script src="../../_static/underscore.js"></script>
+    <script src="../../_static/doctools.js"></script>
+    <script src="../../_static/language_data.js"></script>
     
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" /> 
@@ -26,8 +27,9 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.4.0 documentation</a> &#187;</li>
-          <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">Module code</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.4.2 documentation</a> &#187;</li>
+          <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">Module code</a> &#187;</li>
+        <li class="nav-item nav-item-this"><a href="">rtmidi.midiconstants</a></li> 
       </ul>
     </div>  
 
@@ -50,7 +52,7 @@
 <span class="n">NOTE_ON</span> <span class="o">=</span> <span class="mh">0x90</span>
 <span class="c1"># 1001cccc 0nnnnnnn 0vvvvvvv (channel, note, velocity)</span>
 
-<span class="n">POLYPHONIC_PRESSURE</span> <span class="o">=</span> <span class="n">POLY_PRESSURE</span> <span class="o">=</span> <span class="mh">0xA0</span>
+<span class="n">POLY_AFTERTOUCH</span> <span class="o">=</span> <span class="n">POLYPHONIC_PRESSURE</span> <span class="o">=</span> <span class="n">POLY_PRESSURE</span> <span class="o">=</span> <span class="mh">0xA0</span>
 <span class="c1"># 1010cccc 0nnnnnnn 0vvvvvvv (channel, note, velocity)</span>
 
 <span class="c1"># see Channel Mode Messages for Controller Numbers</span>
@@ -60,7 +62,7 @@
 <span class="n">PROGRAM_CHANGE</span> <span class="o">=</span> <span class="mh">0xC0</span>
 <span class="c1"># 1100cccc 0ppppppp (channel, program)</span>
 
-<span class="n">CHANNEL_PRESSURE</span> <span class="o">=</span> <span class="n">MONO_PRESSURE</span> <span class="o">=</span> <span class="mh">0xD0</span>
+<span class="n">CHANNEL_AFTERTOUCH</span> <span class="o">=</span> <span class="n">CHANNEL_PRESSURE</span> <span class="o">=</span> <span class="n">MONO_PRESSURE</span> <span class="o">=</span> <span class="mh">0xD0</span>
 <span class="c1"># 1101cccc 0ppppppp (channel, pressure)</span>
 
 <span class="n">PITCH_BEND</span> <span class="o">=</span> <span class="mh">0xE0</span>
@@ -80,10 +82,10 @@
 <span class="n">FOOT_CONTROLLER</span> <span class="o">=</span> <span class="n">FOOT_CONTROLLER_MSB</span> <span class="o">=</span> <span class="mh">0x04</span>
 <span class="n">PORTAMENTO_TIME</span> <span class="o">=</span> <span class="n">PORTAMENTO_TIME_MSB</span> <span class="o">=</span> <span class="mh">0x05</span>
 <span class="n">DATA_ENTRY</span> <span class="o">=</span> <span class="n">DATA_ENTRY_MSB</span> <span class="o">=</span> <span class="mh">0x06</span>
-<span class="n">CHANNEL_VOLUME</span> <span class="o">=</span> <span class="n">CHANNEL_VOLUME_MSB</span> <span class="o">=</span> <span class="mh">0x07</span>
+<span class="n">VOLUME</span> <span class="o">=</span> <span class="n">CHANNEL_VOLUME</span> <span class="o">=</span> <span class="n">CHANNEL_VOLUME_MSB</span> <span class="o">=</span> <span class="mh">0x07</span>
 <span class="n">BALANCE</span> <span class="o">=</span> <span class="n">BALANCE_MSB</span> <span class="o">=</span> <span class="mh">0x08</span>
 <span class="n">PAN</span> <span class="o">=</span> <span class="n">PAN_MSB</span> <span class="o">=</span> <span class="mh">0x0A</span>
-<span class="n">EXPRESSION_CONTROLLER</span> <span class="o">=</span> <span class="n">EXPRESSION_CONTROLLER_MSB</span> <span class="o">=</span> <span class="mh">0x0B</span>
+<span class="n">EXPRESSION</span> <span class="o">=</span> <span class="n">EXPRESSION_CONTROLLER</span> <span class="o">=</span> <span class="n">EXPRESSION_CONTROLLER_MSB</span> <span class="o">=</span> <span class="mh">0x0B</span>
 <span class="n">EFFECT_CONTROL_1</span> <span class="o">=</span> <span class="n">EFFECT_CONTROL_1_MSB</span> <span class="o">=</span> <span class="mh">0x0C</span>
 <span class="n">EFFECT_CONTROL_2</span> <span class="o">=</span> <span class="n">EFFECT_CONTROL_2_MSB</span> <span class="o">=</span> <span class="mh">0x0D</span>
 <span class="n">GENERAL_PURPOSE_CONTROLLER_1</span> <span class="o">=</span> <span class="n">GENERAL_PURPOSE_CONTROLLER_1_MSB</span> <span class="o">=</span> <span class="mh">0x10</span>
@@ -94,15 +96,15 @@
 <span class="c1"># High resolution continuous controllers (LSB)</span>
 
 <span class="n">BANK_SELECT_LSB</span> <span class="o">=</span> <span class="mh">0x20</span>
-<span class="n">MODULATION_WHEEL_LSB</span> <span class="o">=</span> <span class="mh">0x21</span>
+<span class="n">MODULATION_LSB</span> <span class="o">=</span> <span class="n">MODULATION_WHEEL_LSB</span> <span class="o">=</span> <span class="mh">0x21</span>
 <span class="n">BREATH_CONTROLLER_LSB</span> <span class="o">=</span> <span class="mh">0x22</span>
 <span class="n">FOOT_CONTROLLER_LSB</span> <span class="o">=</span> <span class="mh">0x24</span>
 <span class="n">PORTAMENTO_TIME_LSB</span> <span class="o">=</span> <span class="mh">0x25</span>
 <span class="n">DATA_ENTRY_LSB</span> <span class="o">=</span> <span class="mh">0x26</span>
-<span class="n">CHANNEL_VOLUME_LSB</span> <span class="o">=</span> <span class="mh">0x27</span>
+<span class="n">VOLUME_LSB</span> <span class="o">=</span> <span class="n">CHANNEL_VOLUME_LSB</span> <span class="o">=</span> <span class="mh">0x27</span>
 <span class="n">BALANCE_LSB</span> <span class="o">=</span> <span class="mh">0x28</span>
 <span class="n">PAN_LSB</span> <span class="o">=</span> <span class="mh">0x2A</span>
-<span class="n">EXPRESSION_CONTROLLER_LSB</span> <span class="o">=</span> <span class="mh">0x2B</span>
+<span class="n">EXPRESSION_LSB</span> <span class="o">=</span> <span class="n">EXPRESSION_CONTROLLER_LSB</span> <span class="o">=</span> <span class="mh">0x2B</span>
 <span class="n">EFFECT_CONTROL_1_LSB</span> <span class="o">=</span> <span class="mh">0x2C</span>
 <span class="n">EFFECT_CONTROL_2_LSB</span> <span class="o">=</span> <span class="mh">0x2D</span>
 <span class="n">GENERAL_PURPOSE_CONTROLLER_1_LSB</span> <span class="o">=</span> <span class="mh">0x30</span>
@@ -288,6 +290,7 @@
     <span class="k">return</span> <span class="p">(</span><span class="n">byte</span> <span class="o">&amp;</span> <span class="mh">0x80</span><span class="p">)</span> <span class="o">==</span> <span class="mh">0x80</span>  <span class="c1"># 1000 0000</span></div>
 </pre></div>
 
+            <div class="clearer"></div>
           </div>
         </div>
       </div>
@@ -302,7 +305,7 @@
     </form>
     </div>
 </div>
-<script type="text/javascript">$('#searchbox').show(0);</script>
+<script>$('#searchbox').show(0);</script>
         </div>
       </div>
       <div class="clearer"></div>
@@ -316,13 +319,14 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.4.0 documentation</a> &#187;</li>
-          <li class="nav-item nav-item-1"><a href="../index.html" >Module code</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.4.2 documentation</a> &#187;</li>
+          <li class="nav-item nav-item-1"><a href="../index.html" >Module code</a> &#187;</li>
+        <li class="nav-item nav-item-this"><a href="">rtmidi.midiconstants</a></li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2012 - 2020, Christopher Arndt.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.2.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.1.2.
     </div>
   </body>
 </html>
