Update docs for commit 0cb497f

--- a/contributing.html
+++ b/contributing.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contributing &#8212; python-rtmidi 1.4.2 documentation</title>
+    <title>Contributing &#8212; python-rtmidi 1.4.3 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
@@ -35,7 +35,7 @@
         <li class="right" >
           <a href="rtmidi.html" title="rtmidi package"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.4.2 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.4.3 documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">Contributing</a></li> 
       </ul>
     </div>  
@@ -145,7 +145,7 @@ $ git push -u origin name-of-your-bugfix-or-feature
 your new functionality into a function with a docstring, and add the
 feature to the release notes in <code class="docutils literal notranslate"><span class="pre">CHANGELOG.rst</span></code>.</p></li>
 <li><p>The pull request should work for all supported Python 3 versions (see
-classifiers in <code class="docutils literal notranslate"><span class="pre">rtmidi/release.py</span></code>)</p>
+classifiers in <code class="docutils literal notranslate"><span class="pre">setup.cfg</span></code>)</p>
 <p>Run <code class="docutils literal notranslate"><span class="pre">tox</span></code> to make sure that the tests pass for all supported Python
 versions.</p>
 </li>
@@ -227,7 +227,7 @@ versions.</p>
         <li class="right" >
           <a href="rtmidi.html" title="rtmidi package"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.4.2 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.4.3 documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">Contributing</a></li> 
       </ul>
     </div>
