--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index &#8212; python-rtmidi 1.4.2 documentation</title>
+    <title>Index &#8212; python-rtmidi 1.4.3 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
@@ -27,7 +27,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.4.2 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.4.3 documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">Index</a></li> 
       </ul>
     </div>  
@@ -179,8 +179,6 @@
 </li>
       <li><a href="rtmidi.html#rtmidi.MidiOut">MidiOut (class in rtmidi)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     module
 
@@ -190,6 +188,8 @@
         <li><a href="rtmidi.html#module-rtmidi.midiconstants">rtmidi.midiconstants</a>
 </li>
         <li><a href="rtmidi.html#module-rtmidi.midiutil">rtmidi.midiutil</a>
+</li>
+        <li><a href="rtmidi.html#module-rtmidi.version">rtmidi.version</a>
 </li>
       </ul></li>
   </ul></td>
@@ -253,6 +253,13 @@
 
       <ul>
         <li><a href="rtmidi.html#module-rtmidi.midiutil">module</a>
+</li>
+      </ul></li>
+      <li>
+    rtmidi.version
+
+      <ul>
+        <li><a href="rtmidi.html#module-rtmidi.version">module</a>
 </li>
       </ul></li>
       <li><a href="rtmidi.html#rtmidi.RtMidiError">RtMidiError (class in rtmidi)</a>
@@ -331,7 +338,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.4.2 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.4.3 documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">Index</a></li> 
       </ul>
     </div>
