Update docs for commit 5800329

--- a/authors.html
+++ b/authors.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Credits &#8212; python-rtmidi 1.5.1 documentation</title>
+    <title>Credits &#8212; python-rtmidi 1.5.3 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/classic.css" />
     
@@ -33,7 +33,7 @@
         <li class="right" >
           <a href="contributing.html" title="Contributing"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.5.1 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.5.3 documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">Credits</a></li> 
       </ul>
     </div>  
@@ -66,6 +66,7 @@
 <li><p>Maurizio Berti</p></li>
 <li><p>Benoit Pierre</p></li>
 <li><p>Bruno Enten</p></li>
+<li><p>Marek Szuba</p></li>
 </ul>
 </section>
 <section id="testing">
@@ -143,7 +144,7 @@
         <li class="right" >
           <a href="contributing.html" title="Contributing"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.5.1 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.5.3 documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">Credits</a></li> 
       </ul>
     </div>
